feat: configurable git commit author with agent as Co-Author
Add git.author config option to let operators set themselves as the
commit author while the agent appears only as Co-Authored-By. When
git.author.name and git.author.email are set in gigi.config.yaml,
git user.name/email use the operator's identity and the system prompt
instructs the agent to add "Co-Authored-By: {agent} <{email}>" to
all commit messages.

Closes #64

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/gigi.config.example.yaml
+++ b/gigi.config.example.yaml
@@ -15,10 +15,17 @@ agent:
   description: a persistent AI coordinator
   # Gitea organization for repo operations
   org: ${GITEA_ORG:-idea}
-  # Git identity for commits
+  # Git identity for the agent (used as Co-Authored-By when author override is set)
   git:
     name: Gigi
     email: gigi@localhost
+    # Optional: override the commit author (operator identity).
+    # When set, commits are authored as this identity and the agent
+    # appears only as Co-Authored-By in commit messages.
+    # Example:
+    #   author:
+    #     name: Your Name
+    #     email: you@example.com
   # Optional: Extra infrastructure context shown to the agent
   # infrastructure: "3-node ARM64 cluster running Docker Swarm"
   # Optional: Extra prompt sections appended to system prompt (inline)
