test: add Svelte component tests with @testing-library/svelte
Set up component test infrastructure:
- Install @testing-library/svelte, @testing-library/jest-dom, jsdom, @testing-library/user-event
- Add "component" vitest workspace with jsdom env, svelte plugin, and browser conditions
- Create test setup file with auto-cleanup and jest-dom matchers
- Add `npm run test:components` script and include in CI pipeline

Write 76 tests across 7 components:
- SystemMessage (6 tests): text rendering, icon, special characters
- ConnectionStatus (6 tests): state classes, title attributes
- ChannelBadge (14 tests): all channels, direction, CSS classes, fallback
- TokenBadge (15 tests): formatting, expand/collapse, cache rows, duration, turns
- ToolBlock (15 tests): name, summary, status, expand/collapse, input/output
- SectionHeader (6 tests): icon, title, heading, no-title
- ChatInput (14 tests): placeholder, send, Enter key, Shift+Enter, mobile, disabled, draft

Closes #336

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test:unit": "vitest run --project unit",
     "test:integration": "TEST_DATABASE_URL=${TEST_DATABASE_URL:-postgresql://gigi_test:gigi_test@postgres:5432/gigi_test} vitest run --project integration",
     "pretest:integration": "bash scripts/backup-db.sh",
-    "test:ci": "vitest run --project unit && npm run test:integration"
+    "test:components": "vitest run --project component",
+    "test:ci": "vitest run --project unit && vitest run --project component && npm run test:integration"
   },
   "dependencies": {
     "@anthropic-ai/claude-agent-sdk": "^0.2.62",
@@ -39,12 +40,16 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^6.2.4",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/svelte": "^5.3.1",
+    "@testing-library/user-event": "^14.6.1",
     "@types/dompurify": "^3.0.5",
     "@types/node": "^20.0.0",
     "@types/pg": "^8.11.0",
     "@types/ws": "^8.5.0",
     "@vitest/coverage-v8": "^4.0.18",
     "happy-dom": "^20.7.0",
+    "jsdom": "^28.1.0",
     "msw": "^2.12.10",
     "svelte-check": "^4.4.0",
     "tsx": "^4.21.0",
